--- a/install
+++ b/install
@@ -2,7 +2,4 @@
 
 set -eo pipefail; [[ $DOKKU_TRACE ]] && set -x
 
-PLUGIN_DIR=$(dirname $0)
-. "$PLUGIN_DIR/lib/helpers"
-
-f_dokku_cadvisor_install
+dokku cadvisor:install
